# serde_rosmsg

./: CHANGELOG.md  Cargo.toml  README.md
benches/: image_bench.rs
src/: de.rs  error.rs  lib.rs  ser.rs
src/datatests/: mod.rs  nav_sat_fix.rs  pose.rs  pose_array.rs  pose_with_covariance.rs  sensor_msgs_image.rs  string.rs
